; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_monotonic_core.c_check_fixed_counts.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_monotonic_core.c_check_fixed_counts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@T_QUIET = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"instructions are larger than 0\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"cycles are larger than 0\00", align 1
@.str.2 = private unnamed_addr constant [36 x i8] c"instructions increase monotonically\00", align 1
@.str.3 = private unnamed_addr constant [30 x i8] c"cycles increase monotonically\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ([2 x i32]*)* @check_fixed_counts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @check_fixed_counts([2 x i32]* %0) #0 {
  %2 = alloca [2 x i32]*, align 8
  store [2 x i32]* %0, [2 x i32]** %2, align 8
  %3 = load i32, i32* @T_QUIET, align 4
  %4 = load [2 x i32]*, [2 x i32]** %2, align 8
  %5 = getelementptr inbounds [2 x i32], [2 x i32]* %4, i64 0
  %6 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 0
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @UINT64_C(i32 0)
  %9 = call i32 @T_EXPECT_GT(i32 %7, i32 %8, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %10 = load i32, i32* @T_QUIET, align 4
  %11 = load [2 x i32]*, [2 x i32]** %2, align 8
  %12 = getelementptr inbounds [2 x i32], [2 x i32]* %11, i64 0
  %13 = getelementptr inbounds [2 x i32], [2 x i32]* %12, i64 0, i64 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @UINT64_C(i32 0)
  %16 = call i32 @T_EXPECT_GT(i32 %14, i32 %15, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0))
  %17 = load [2 x i32]*, [2 x i32]** %2, align 8
  %18 = getelementptr inbounds [2 x i32], [2 x i32]* %17, i64 1
  %19 = getelementptr inbounds [2 x i32], [2 x i32]* %18, i64 0, i64 0
  %20 = load i32, i32* %19, align 4
  %21 = load [2 x i32]*, [2 x i32]** %2, align 8
  %22 = getelementptr inbounds [2 x i32], [2 x i32]* %21, i64 0
  %23 = getelementptr inbounds [2 x i32], [2 x i32]* %22, i64 0, i64 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @T_EXPECT_GT(i32 %20, i32 %24, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.2, i64 0, i64 0))
  %26 = load [2 x i32]*, [2 x i32]** %2, align 8
  %27 = getelementptr inbounds [2 x i32], [2 x i32]* %26, i64 1
  %28 = getelementptr inbounds [2 x i32], [2 x i32]* %27, i64 0, i64 1
  %29 = load i32, i32* %28, align 4
  %30 = load [2 x i32]*, [2 x i32]** %2, align 8
  %31 = getelementptr inbounds [2 x i32], [2 x i32]* %30, i64 0
  %32 = getelementptr inbounds [2 x i32], [2 x i32]* %31, i64 0, i64 1
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @T_EXPECT_GT(i32 %29, i32 %33, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.3, i64 0, i64 0))
  ret void
}

declare dso_local i32 @T_EXPECT_GT(i32, i32, i8*) #1

declare dso_local i32 @UINT64_C(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
